--- a/index.html
+++ b/index.html
@@ -1,52 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
 
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pluravita | Your Safe Space</title>
+    <title>Pluravita | Tu Espacio Seguro</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Plus Jakarta Sans', sans-serif;
             scroll-behavior: smooth;
+            -webkit-font-smoothing: antialiased;
         }
-
         .font-serif-logo {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Fraunces', serif;
+            font-variation-settings: "SOFT" 100, "WONK" 1;
         }
-
-        .bg-soft {
-            background-color: #f9f6f2;
-        }
-
-        .text-beige {
-            color: #9a7b5c;
-        }
-
-        .bg-beige {
-            background-color: #9a7b5c;
-        }
-
-        .border-beige {
-            border-color: #9a7b5c;
-        }
-
+        .bg-soft { background-color: #f9f6f2; }
+        .text-beige { color: #9a7b5c; }
+        .bg-beige { background-color: #9a7b5c; }
+        .border-beige { border-color: #9a7b5c; }
+        
         .logo-text {
             color: #4a3728;
             font-size: 1.5rem;
-            font-weight: 500;
-            letter-spacing: -0.02em;
+            font-weight: 600;
+            letter-spacing: -0.03em;
+        }
+
+        h1, h2, h3, .font-serif-logo {
+            letter-spacing: -0.01em;
+        }
+
+        .transition-all {
+            transition-duration: 400ms;
+        }
+
+        /* Perforated edge effect for coupon styling */
+        .coupon-perforation {
+            background-image: radial-gradient(circle at 0 50%, transparent 10px, #ffffff 10px);
+            background-size: 100% 20px;
         }
     </style>
+    <script>
+        // Polyfill básico para evitar que la aplicación falle si process.env no está definido por el host
+        window.process = window.process || { env: {} };
+    </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "uu28lpvbz0");
+    </script>
+<script type="importmap">
+{
+  "imports": {
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
+    "react": "https://esm.sh/react@19.2.3",
+    "react/": "https://esm.sh/react@19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
+    "recharts": "https://esm.sh/recharts@3.6.0?external=react,react-dom",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+  }
+}
+</script>
 </head>
-
 <body class="bg-soft text-gray-800">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <div id="root">
+        <!-- Loader inicial por si el JS tarda en cargar -->
+        <div class="min-h-screen flex items-center justify-center bg-[#f9f6f2]">
+            <div class="animate-pulse flex flex-col items-center">
+                <div class="w-12 h-12 bg-[#9a7b5c]/20 rounded-full mb-4"></div>
+                <div class="h-2 w-24 bg-[#9a7b5c]/10 rounded"></div>
+            </div>
+        </div>
+    </div>
+    <script type="module" src="./index.tsx"></script>
 </body>
-
 </html>
