--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
             background-size: 100% 20px;
         }
     </style>
-    <script>
-        // Polyfill básico para evitar que la aplicación falle si process.env no está definido por el host
-        window.process = window.process || { env: {} };
-    </script>
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -59,25 +55,17 @@
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
     "react": "https://esm.sh/react@19.2.3",
-    "react/": "https://esm.sh/react@19.2.3/",
     "react-dom": "https://esm.sh/react-dom@19.2.3",
     "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
-    "recharts": "https://esm.sh/recharts@3.6.0?external=react,react-dom",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body class="bg-soft text-gray-800">
-    <div id="root">
-        <!-- Loader inicial por si el JS tarda en cargar -->
-        <div class="min-h-screen flex items-center justify-center bg-[#f9f6f2]">
-            <div class="animate-pulse flex flex-col items-center">
-                <div class="w-12 h-12 bg-[#9a7b5c]/20 rounded-full mb-4"></div>
-                <div class="h-2 w-24 bg-[#9a7b5c]/10 rounded"></div>
-            </div>
-        </div>
-    </div>
-    <script type="module" src="./index.tsx"></script>
+    <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
