--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
         })(window, document, "clarity", "script", "uu28lpvbz0");
     </script>
 
+<script type="importmap">
+{
+  "imports": {
+    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+  }
+}
+</script>
 </head>
 <body class="bg-soft text-gray-800">
     <div id="root"></div>
